# openalex-search-cli

./: .gitignore  AGENTS.md  COOKBOOK.md  Makefile  README.md  pyproject.toml  requirements.txt
ai/skills/openalex-search-cli/: SKILL.md
docs/: openalex-api.yaml  openalex-recipes.md  openalex_search_cli_PRD.md
docs/html/: openalex-recipes.html
docs/superpowers/plans/: 2026-07-05-rich-openalex-cli-params.md
src/: batch_processor.py  cli.py  client.py  config.py  logger.py  output.py  utils.py
src/commands/: authors_commands.py  autocomplete_commands.py  awards_commands.py  changefiles_commands.py  common.py  continents_commands.py  countries_commands.py  domains_commands.py  fields_commands.py  funders_commands.py  institutions_commands.py  keywords_commands.py  languages_commands.py  publishers_commands.py  rate_limit_commands.py  sdgs_commands.py  sources_commands.py  subfields_commands.py  text_topics_commands.py  topics_commands.py  works_commands.py
tests/: test_cli.py
