[project]
name = "openalex-search-cli"
version = "0.1.0"
description = "OpenAlex API Python Client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "pandas>=1.3.0",
    "openpyxl>=3.1.2",
    "requests>=2.28.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
    "isort>=5.13.0"
]

[project.scripts]
openalex-search-cli = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
